# mythos-defense

./: .env.example  .gitignore  README.md  pyproject.toml  sample_brief.md
docs/: claude.md  mythos-defense-platform-blueprint.md  mythos-defense-platform-complete-reference.md  mythos-defense-platform-deep-dive.md  mythos-defense-platform-evaluation.md  mythos-defense-platform-gtm.md  mythos-defense-platform-orchestrator.md  mythos-defense-platform-sandboxing.md  mythos-defense-v0-implementation-guide.md  mythos-website-creation-build.sh
eval/: runner.py
src/mythos_defense/: cli.py  utils.py
src/mythos_defense/adapters/: base.py  mock.py  semgrep.py
src/mythos_defense/agents/: architect.py  base.py  blue_team.py  deployment.py  supply_chain.py
src/mythos_defense/commands/: audit.py  build.py  deploy.py  harden.py  init.py  new.py  plan.py  report.py  review.py  sandbox.py  watch.py
src/mythos_defense/orchestrator/: budget.py  verify.py  workflow.py
src/mythos_defense/prompts/: architect.md  blue_team.md  deployment.md  supply_chain.md
src/mythos_defense/schemas/: findings.py
tests/: test_adapters.py  test_budget.py  test_schemas.py  test_utils.py
tests/fixtures/findings/: sample_jwt_none.json
